--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 :root {
-  font-family: 'Space Grotesk', 'Segoe UI', sans-serif;
-  line-height: 1.4;
+  font-family: 'Press Start 2P', monospace;
+  line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: unset;
 }
 
 * {
@@ -16,4 +16,11 @@ html,
 body {
   margin: 0;
   min-width: 320px;
+  height: 100%;
+  overflow: hidden;
+  background: #060612;
+}
+
+#root {
+  height: 100%;
 }
