--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,7 @@
 .account-stats {
   margin: 0;
   font-size: 0.5rem;
-  color: var(--text);
+  color: #ffffff;
   line-height: 1.6;
 }
 
@@ -372,6 +372,7 @@ button:disabled {
 }
 
 .board {
+  justify-items: center;
   height: 90%;
   width: 90%;
   overflow: auto;
@@ -747,7 +748,7 @@ button:disabled {
     min-width: 0;
     width: 100%;
     flex-wrap: wrap;
-    align-items: flex-start;
+    
     justify-content: flex-start;
   }
 
